[package]
name = "nanotoken"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
nanolog = []

[dependencies]
solana-nostd-entrypoint = { version = "0.1.0", path = "../../solana-entrypoint" }
solana-program = "1.18.1 "
bytemuck = { version = "1.14.1", features = ["derive"] }
strum = { version = "0.26.1", default-features = false, features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18.1"
solana-sdk = "1.18.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.35.1", features = ["full"] }
